<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearactivity"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginBottom="20dp"
        android:id="@+id/tvhistory"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="History Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleviewhistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>